Impossible to dev web app

--- a/lydia_collect.com/index.html
+++ b/lydia_collect.com/index.html
@@ -51,7 +51,7 @@
 
     <h2>Goal behind this bot</h2>
     <p>
-        The objective of this project is to automate the shotgun of events'places. <br>
+        The objective of this project is to <strong>automate</strong> the <strong>shotgun</strong> of events'places. <br>
     It works especially for events that have a facebook page dedicated and for shotguns organized with a Lydia collect.
     It can ensure one's presence to any event organized with Lydia on Facebook. 
     </p>
@@ -60,20 +60,20 @@
     The bot will be taking as input : 
     <div>
         <ul>
-          <li>The facebook page link for the event</li>
-          <li>The user's facebook credentials in order to access the page <strong>*</strong></li>
-          <li>The number of fields he wants to complete</li>
+          <li>The <strong>facebook</strong> page link for the event</li>
+          <li>The user's facebook <strong>credentials</strong> in order to access the page <strong>*</strong></li>
+          <li>The number of <strong>fields</strong> he wants to complete</li>
         </ul>
       </div>
     <br>
-    Then, the user will be asked to enter its key / value fields according to the number of fields he provided. 
+    Then, the user will be asked to enter his key / value fields according to the number of fields he provided. 
     <br>
     For instance, if you know there will be a "Name" field in the Lydia collect, you have to provide the field Name with the value being your name.
       taking a URL and a list of attributes as input
 One you gave all your key / value pairs, the bot will be able to detect on the facebook page you provided 
 the presence of a lydia collect link. Eventually, it will open it, and complete the form with the given attributes. <br>
 <br>
-The user can activate 3 toggles : 
+The user can activate 3 <strong>toggles</strong> : 
 <div>
     <ul>
       <li><strong>Auto submit form</strong></li>
@@ -94,7 +94,7 @@ The user can activate 3 toggles :
     <br>
     Also, you can check my : <a href="https://github.com/hugowola/">Github</a>.
     </p>    
-    
+
   </div> <!--End of second tab-->
     
 
